--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
   <meta charset="utf-8">
   <title>Une reproduction Mondrian</title>
   <style type="text/css">
+  html, body{height:100%;
+  width:100%;}
+  .a{width:25%;
+    height:100%;
+    background-color:blanc;
+    border-right:white solid 3px;
+    float:left;
+    box-sizing: border-box;
+}
+  .d{width:75%;
+    height:50%;
+    background-color:blanc;
+ float:right;
+
+border-left: 3px solid #000000;
+box-sizing: border-box;}
+.c{width:75%;
+   height:50%;
+ background-color: red;
+border-top: 3px solid black;
+border-left: 3px solid black;
+float:right;
+box-sizing: border-box;
+}
   </style>
 </head>
 <body>
-  <div id="wrapper">bla</div>
+  <div class="a">
+    </div>
+    <div class="d"></div>
+    <div class="c"></div>
+
 </body>
 </html>
